--- a/compression/package.json
+++ b/compression/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression-webpack-plugin": "^11.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
